--- a/components/Profile/UserMainCard/UserMainCard.module.css
+++ b/components/Profile/UserMainCard/UserMainCard.module.css
@@ -5,7 +5,7 @@
   grid-template-areas:
     'header'
     'rankings';
-  background-color: hsla(var(--gray-100));
+  background-color: hsla(var(--background-content-hsl));
   border-radius: var(--main-borderRadius);
   padding: 1.4rem 1.8rem;
   gap: 1.2rem;
